{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 136,
  "lineage": "6d35611e-0c9f-2376-7c94-85388c88141f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0779fadd1b6a350c0",
            "arn": "arn:aws:ec2:us-east-1:523738358273:elastic-ip/eipalloc-0779fadd1b6a350c0",
            "association_id": "eipassoc-0fcbb85c7610e4de2",
            "domain": "vpc",
            "id": "eipalloc-0779fadd1b6a350c0",
            "instance": "i-07b7a0df29d6339f8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07ff6da948869f574",
            "private_dns": "ip-10-0-101-193.ec2.internal",
            "private_ip": "10.0.101.193",
            "public_dns": "ec2-44-194-149-150.compute-1.amazonaws.com",
            "public_ip": "44.194.149.150",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "staging",
              "owners": "HR"
            },
            "tags_all": {
              "environment": "staging",
              "owners": "HR"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_iam_instance_profile.this",
            "module.ec2_public.aws_iam_role.this",
            "module.ec2_public.aws_iam_role_policy_attachment.this",
            "module.ec2_public.aws_instance.ignore_ami",
            "module.ec2_public.aws_instance.this",
            "module.ec2_public.aws_spot_instance_request.this",
            "module.ec2_public.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public.data.aws_partition.current",
            "module.ec2_public.data.aws_ssm_parameter.this",
            "module.public_bastian_sg.module.sg.aws_security_group.this",
            "module.public_bastian_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-070b7c2988d4e2c89",
            "arn": "arn:aws:ec2:us-east-1:523738358273:instance/i-07b7a0df29d6339f8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b7a0df29d6339f8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07ff6da948869f574",
            "private_dns": "ip-10-0-101-193.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.193",
            "public_dns": "ec2-3-80-87-43.compute-1.amazonaws.com",
            "public_ip": "3.80.87.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-020da727023cc2375",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05315ee9f822d3d10",
            "tags": {
              "Name": "HR-staging-BastionHost",
              "environment": "staging",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-staging-BastionHost",
              "environment": "staging",
              "owners": "HR"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "HR-staging-BastionHost"
            },
            "vpc_security_group_ids": [
              "sg-04d754c4b6c955e5a"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_iam_instance_profile.this",
            "module.ec2_public.data.aws_ssm_parameter.this",
            "module.public_bastian_sg.module.sg.aws_security_group.this",
            "module.public_bastian_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastian_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:security-group/sg-04d754c4b6c955e5a",
            "description": "Security group for web-server with HTTP ports open within VPC",
            "egress": [],
            "id": "sg-04d754c4b6c955e5a",
            "ingress": [],
            "name": "HR-staging-public-bastian-sg-20240805122034832500000009",
            "name_prefix": "HR-staging-public-bastian-sg-",
            "owner_id": "523738358273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HR-staging-public-bastian-sg",
              "environment": "staging",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-staging-public-bastian-sg",
              "environment": "staging",
              "owners": "HR"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0287040ad30995429"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastian_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-999007104",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04d754c4b6c955e5a",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastian_sg.module.sg.aws_security_group.this",
            "module.public_bastian_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastian_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1648894294",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04d754c4b6c955e5a",
            "security_group_rule_id": "sgr-08b6834309cc1e6de",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastian_sg.module.sg.aws_security_group.this",
            "module.public_bastian_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3569515747",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04d754c4b6c955e5a",
            "security_group_rule_id": "sgr-05fe7e4e4d9feb380",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastian_sg.module.sg.aws_security_group.this",
            "module.public_bastian_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastian_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-784467406",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04d754c4b6c955e5a",
            "security_group_rule_id": "sgr-0c1cdda5d1dcf09bd",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastian_sg.module.sg.aws_security_group.this",
            "module.public_bastian_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:network-acl/acl-0860e69539eef088b",
            "default_network_acl_id": "acl-0860e69539eef088b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0860e69539eef088b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "523738358273",
            "subnet_ids": [
              "subnet-01946714fa157de93",
              "subnet-0230636a967fd410b",
              "subnet-04847614a44a7a13f",
              "subnet-05315ee9f822d3d10",
              "subnet-082b1dcc2d4f8bcf1",
              "subnet-0fe896a242afef339"
            ],
            "tags": {
              "Name": "HR-staging-myvpc-default",
              "environment": "staging",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-staging-myvpc-default",
              "environment": "staging",
              "owners": "HR"
            },
            "vpc_id": "vpc-0287040ad30995429"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:route-table/rtb-0601cee984fdc307e",
            "default_route_table_id": "rtb-0601cee984fdc307e",
            "id": "rtb-0601cee984fdc307e",
            "owner_id": "523738358273",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "HR-staging-myvpc-default",
              "environment": "staging",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-staging-myvpc-default",
              "environment": "staging",
              "owners": "HR"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0287040ad30995429"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:security-group/sg-02ebb712f6fae2874",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02ebb712f6fae2874",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "523738358273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HR-staging-myvpc-default",
              "environment": "staging",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-staging-myvpc-default",
              "environment": "staging",
              "owners": "HR"
            },
            "vpc_id": "vpc-0287040ad30995429"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2e61cca1c9abc96",
            "arn": "arn:aws:ec2:us-east-1:523738358273:elastic-ip/eipalloc-0b2e61cca1c9abc96",
            "domain": "vpc",
            "id": "eipalloc-0b2e61cca1c9abc96",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-200-115-17.compute-1.amazonaws.com",
            "public_ip": "52.200.115.17",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "HR-staging-myvpc-us-east-1a",
              "environment": "staging",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-staging-myvpc-us-east-1a",
              "environment": "staging",
              "owners": "HR"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:internet-gateway/igw-0a72f2ea28aa40b64",
            "id": "igw-0a72f2ea28aa40b64",
            "owner_id": "523738358273",
            "tags": {
              "Name": "HR-staging-myvpc",
              "environment": "staging",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-staging-myvpc",
              "environment": "staging",
              "owners": "HR"
            },
            "vpc_id": "vpc-0287040ad30995429"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2e61cca1c9abc96",
            "association_id": "eipassoc-0119b2be15921aff5",
            "connectivity_type": "public",
            "id": "nat-04b0b2585ab4df84a",
            "network_interface_id": "eni-085f634a1f20e137e",
            "private_ip": "10.0.101.83",
            "public_ip": "52.200.115.17",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05315ee9f822d3d10",
            "tags": {
              "Name": "HR-staging-myvpc-us-east-1a",
              "environment": "staging",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-staging-myvpc-us-east-1a",
              "environment": "staging",
              "owners": "HR"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09342cfbf994fc0411080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04b0b2585ab4df84a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09342cfbf994fc041",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a72f2ea28aa40b64",
            "id": "r-rtb-0120164024fb2b4b61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0120164024fb2b4b6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:route-table/rtb-021955b05530fe7ce",
            "id": "rtb-021955b05530fe7ce",
            "owner_id": "523738358273",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR-staging-myvpc-db",
              "environment": "staging",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-staging-myvpc-db",
              "environment": "staging",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-0287040ad30995429"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:route-table/rtb-09342cfbf994fc041",
            "id": "rtb-09342cfbf994fc041",
            "owner_id": "523738358273",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR-staging-myvpc-private",
              "environment": "staging",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-staging-myvpc-private",
              "environment": "staging",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-0287040ad30995429"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:route-table/rtb-0120164024fb2b4b6",
            "id": "rtb-0120164024fb2b4b6",
            "owner_id": "523738358273",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR-staging-myvpc-public",
              "environment": "staging",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-staging-myvpc-public",
              "environment": "staging",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-0287040ad30995429"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9c24e65190c1a5b",
            "route_table_id": "rtb-021955b05530fe7ce",
            "subnet_id": "subnet-0230636a967fd410b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2e752d826672d8c",
            "route_table_id": "rtb-021955b05530fe7ce",
            "subnet_id": "subnet-082b1dcc2d4f8bcf1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d136a865ed9eb9d",
            "route_table_id": "rtb-09342cfbf994fc041",
            "subnet_id": "subnet-01946714fa157de93"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c08cfdecd1fe6b78",
            "route_table_id": "rtb-09342cfbf994fc041",
            "subnet_id": "subnet-04847614a44a7a13f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e641d47531b07ca7",
            "route_table_id": "rtb-0120164024fb2b4b6",
            "subnet_id": "subnet-05315ee9f822d3d10"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0981c7c0500023e34",
            "route_table_id": "rtb-0120164024fb2b4b6",
            "subnet_id": "subnet-0fe896a242afef339"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:subnet/subnet-0230636a967fd410b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0230636a967fd410b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523738358273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-staging-myvpc-db-us-east-1a",
              "Type": "Database Subnets",
              "environment": "staging",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-staging-myvpc-db-us-east-1a",
              "Type": "Database Subnets",
              "environment": "staging",
              "owners": "HR"
            },
            "vpc_id": "vpc-0287040ad30995429"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:subnet/subnet-082b1dcc2d4f8bcf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082b1dcc2d4f8bcf1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523738358273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-staging-myvpc-db-us-east-1b",
              "Type": "Database Subnets",
              "environment": "staging",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-staging-myvpc-db-us-east-1b",
              "Type": "Database Subnets",
              "environment": "staging",
              "owners": "HR"
            },
            "vpc_id": "vpc-0287040ad30995429"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:subnet/subnet-01946714fa157de93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01946714fa157de93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523738358273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-staging-myvpc-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "staging",
              "kubernetes.io/cluster/HR-staging-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-staging-myvpc-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "staging",
              "kubernetes.io/cluster/HR-staging-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "HR"
            },
            "vpc_id": "vpc-0287040ad30995429"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:subnet/subnet-04847614a44a7a13f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04847614a44a7a13f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523738358273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-staging-myvpc-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "staging",
              "kubernetes.io/cluster/HR-staging-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-staging-myvpc-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "staging",
              "kubernetes.io/cluster/HR-staging-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "HR"
            },
            "vpc_id": "vpc-0287040ad30995429"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:subnet/subnet-05315ee9f822d3d10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05315ee9f822d3d10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "523738358273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-staging-myvpc-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "staging",
              "kubernetes.io/cluster/HR-staging-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-staging-myvpc-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "staging",
              "kubernetes.io/cluster/HR-staging-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "HR"
            },
            "vpc_id": "vpc-0287040ad30995429"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:subnet/subnet-0fe896a242afef339",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe896a242afef339",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "523738358273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-staging-myvpc-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "staging",
              "kubernetes.io/cluster/HR-staging-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-staging-myvpc-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "staging",
              "kubernetes.io/cluster/HR-staging-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "HR"
            },
            "vpc_id": "vpc-0287040ad30995429"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:vpc/vpc-0287040ad30995429",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0860e69539eef088b",
            "default_route_table_id": "rtb-0601cee984fdc307e",
            "default_security_group_id": "sg-02ebb712f6fae2874",
            "dhcp_options_id": "dopt-05350501c0a899a7a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0287040ad30995429",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0601cee984fdc307e",
            "owner_id": "523738358273",
            "tags": {
              "Name": "HR-staging-myvpc",
              "environment": "staging",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-staging-myvpc",
              "environment": "staging",
              "owners": "HR"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}